CZMQ version 1.2.0 (stable), released on 2011/10/xx
===================================================

Changes
-------

* Fixed issue CZMQ-7, wrong name used for czmq man page.

* Changed zsocket_connect() to return 0 or -1, since zmq_connect() now
  checks endpoints properly (issue LIBZMQ-207).

* All classes handle memory exhaustion correctly by returning an error
  instead of asserting.


CZMQ version 1.1.0 (stable), released on 2011/08/30
===================================================

Changes
-------

* Fixed issue CZMQ-2. (https://zeromq.jira.com/browse/CZMQ-2)

* Removed unused ctx argument from zthread_new() call.

* zloop works with zmq_pollitem_t * instead of void * sockets; allows
  use of native FDs in reactor as well as 0MQ sockets.

* zloop_reader renamed to zloop_poller.

* zloop_cancel renamed to zloop_poller_end, and API changed to work with
  zmq_pollitem_t * instead of a single 0MQ socket void *.

* Added zloop_timer_end, taking same argument as for zloop_timer.

* zloop_poller_end cancels ALL handlers for the socket or FD.

* Added zmsg_content_size method to report full content size of message.

* zmsg_save returns 0/-1 depending on success/failure (previously returned
  void).

* zmsg_dump limited to first 10 frames, to allow mix of large and small
  messages in applications.

* zframe_print truncates output at 70 chars to prevent over-long output.

* Added ability for zsocket_bind to bind to ephemeral port in range 0xc000
  to 0xffff.

* zmq_bind always returns port number bound to, if successful.

* Added zfile class with minimal helper functions.

* Added zfile_size method to return file size, as ssize_t.

* Added socket multipart flush to zctx_destroy to work around libzmq issue
  134, which asserts if a fair-queuing socket still has input at close.

* Added zframe_eq method to compare two frames' size and content.

* Changed zmsg_load to append to an optional existing message.
