@@ -38,7 +38,6 @@ extern "C" {
 #define ZSOCKET_DYNTO       0xffff
 
 //  Create a new socket within our czmq context, replaces zmq_socket.
-//  If the socket is a SUB socket, automatically subscribes to everything.
 //  Use this to get automatic management of the socket at shutdown.
 void *
     zsocket_new (zctx_t *self, int type);
